--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-git remote add origin https://github.com/sahoosriya/jamessmith.git
-git branch -M main
-git push -u origin maingit remote add origin https://github.com/sahoosriya/jamessmith.git
-git branch -M main
-git push -u origin main<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
